# climate-zarr

./: .gitignore  MANIFEST.in  OPTIMIZATION_RECOMMENDATIONS.md  PERFORMANCE_OPTIMIZATION.md  PHASE2_ELT_IMPLEMENTATION.md  README.md  REFACTORING_PLAN.md  analyze_bottleneck_results.py  batch_county_stats.py  build_tasmin_zarr.py  climate_cli.py  climate_output_format.yaml  performance_test_100_counties.py  pipeline_config.yaml  process_all_counties_optimized.py  process_all_counties_parallel.py  profile_bottlenecks.py  pyproject.toml  quick_validate.py  rebuild_zarr_stores.sh  run_batch_county_stats.sh  run_climate_analysis.py  run_quick_test.py  run_tests.py  stack_nc_to_zarr.py  test_all_counties_subset.py  test_data_access.py  test_data_loading.py  test_minimal_processing.py  test_phase2_elt.py  test_seven_counties_optimized.py  test_show_results.py  test_simple_processing.py  test_two_counties.py  test_unified_system.py  validate_results.py
.github/workflows/: ci.yml
archive/: nex-gddp-county-processor.py  parallel_nex_gddp_processor.py  run_spatial_chunks_16cpu.py  run_spatial_temporal_chunks.py  test_annual_simple.py
archive/test_results/: test_parallel_minimal_results.csv  test_parallel_simple_results.csv  test_xclim_indicators_results.csv
archive/tests/: test_parallel_debug.py  (+1 more)
climate_analysis/: __init__.py
data/: README.md
examples/: output_management_example.py
results/: climate_indicators_20250630_112228.parquet  failed_counties.json  performance_test_summary.json  test_fixed_baseline_results.csv  test_minimal_results.csv  test_seven_counties_parallel_results.csv  test_two_counties_optimized_results.csv  test_two_counties_results.csv  test_unified_fixed_baseline.csv
src/: MIGRATION_GUIDE.md  climate_indicator_calculator.py  optimized_climate_calculator.py  optimized_parallel_processor.py  parallel_processor.py  parallel_xclim_processor.py  parallel_xclim_processor_fixed.py  parallel_xclim_processor_unified.py  performance_evaluator.py  precompute_baselines.py  regional_config.py  xclim_indicators_processor.py
test_results/: failed_counties.json
tests/: README.md  conftest.py  run_integration_tests.py  run_regional_test.py  test_backward_compatibility.py  test_cli_integration.py  test_county_stats_integration.py  test_end_to_end_integration.py  test_fixed_baseline.py  test_modular_integration.py  test_modular_processor.py  test_processors.py  test_strategies.py  test_unified_processor.py
utils/: split_counties_by_region.py
(+101 files in other folders)
