[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "climate-analysis"
version = "0.1.0"
description = "A comprehensive climate data analysis package for processing NEX-GDDP data"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "xarray>=0.18.0",
    "xclim>=0.40.0",
    "geopandas>=0.10.0",
    "shapely>=1.8.0",
    "netcdf4>=1.5.0",
    "h5netcdf>=0.11.0",
    "dask[complete]>=2021.10.0",
    "bottleneck>=1.3.0",
    "numba>=0.50.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=2.5.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "ipython>=8.0.0",
]

[project.scripts]
climate-process = "climate_analysis.tools.run_performance_tests:main"
climate-baseline = "climate_analysis.tools.precompute_baselines:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
    "unit: marks tests as unit tests",
]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | archive
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    "archive",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B024",  # abstract base class without abstract methods
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "archive/",
    "tests/",
]

[tool.hatch.build.targets.wheel]
packages = ["climate_analysis"]